--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -2,6 +2,23 @@
   padding-top: 30px;
 }
 
+.movie-image {
+  order: 1;
+  padding-right: 20px;
+}
+
+.movie-information {
+  order: 1;
+  text-align: left;
+  width: 100%;
+}
+
+.movie-information, .movie-reviews {
+  background: #f7f7f7;
+  box-shadow: 0px 5px 10px 0px #e8e6e6;
+  padding: 20px;
+}
+
 .movie-container {
   display: flex;
 }
